--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "ember-computed-enum",
   "version": "0.1.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Creates and manges Enums using Ember computed properties.",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "enum",
+    "ember-data",
+    "computed-property"
   ],
   "license": "MIT",
   "author": "",
@@ -11,7 +14,7 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "gabrielgrant/ember-computed-enum",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
